# python_package_template

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg
src/python_package_template/: __init__.py
test/python_package_template/: test_version.py
