# Adapted from setuptools docs https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = python_package_template
version = file: src/python_package_template/VERSION
authors = Author name
author_email = author_name@domain
description = Package descritpion
long_description = file: README.md, LICENSE
license = MIT License
#license_files = LICENSE  # If not specified, defaults to LICEN[CS]E*, COPYING*, NOTICE*, AUTHORS*
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
# Specify package data via MANIFEST.in file
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    importlib-metadata; python_version<"3.8"

# If the package installs cli commands
# [options.entry_points]
# console_scripts =
#     executable-name = my_package.module:function

[options.extras_require]
dev =
    black
    flake8
    pytest

[flake8]
exclude =
    .git
    __pycache__
    build
    dist
per-file-ignores =
    __init__.py: F401
max-line-length = 88
# E203 - 'whitespace before :' - disabled for compatibility with black
# E501 - 'line too long' - disabled for compatibility with black (which will not enforce strict line lengths during formatting)
extend-ignore =
    E203
    E501
