# Adapted from setuptools docs https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = python_package_template
version = file: src/python_package_template/VERSION
authors = Author name
author_email = author_name@domain
description = Package description
long_description = file: README.rst
license = MIT License
#license_files = LICENSE  # If not specified, defaults to LICEN[CS]E*, COPYING*, NOTICE*, AUTHORS*
classifiers =
    Programming Language :: Python :: 3


[options]
zip_safe = False
# Specify package data via MANIFEST.in file
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where=src

# Use the following if the package installs cli commands
# [options.entry_points]
# console_scripts =
#     executable-name = my_package.module:function


# Installing extras is done via installing package[extra]
# ex: pip install python_package_template[dev]
[options.extras_require]
dev =
    black
    pytest
    ruff
